# select_and_prefetch_related

./: .gitignore  Dockerfile  README.md  data.json  pyproject.toml
apps/shop/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/: settings.py  urls.py
