[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com"},
]
dependencies = [
    "django==4.0",
    "django-debug-toolbar>=4.2.0",
    "djangorestframework>=3.14.0",
    "Faker>=19.6.2",
    "ipython>=8.16.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

